starting weighted graphs

--- a/conjectures.ipynb
+++ b/conjectures.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imports and Functions"
+    "## Imports and Functions"
    ]
   },
   {
@@ -48,11 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_weights(G, weight_type, scale=None):\n",
+    "    # differnt types of positively weighted graphs\n",
     "    m = G.number_of_edges()\n",
     "    if weight_type == 'unweighted':\n",
     "        weights = np.ones(m)\n",
@@ -60,8 +61,6 @@
     "        weights = np.zeros(m)\n",
     "    elif weight_type == 'uniform':\n",
     "        weights = np.random.uniform(low=0, high=1., size=m)\n",
-    "    elif weight_type == 'gaussian':\n",
-    "        weights = np.random.normal(loc=0., scale=scale, size=m)\n",
     "    elif weight_type == 'exponential':\n",
     "        weights = np.random.exponential(scale=scale, size=m)\n",
     "    else:\n",
@@ -299,17 +298,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 181,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Compute or Load Stats"
+    "def load_arrays(file_names, prefix='data/', allow_pickle=False):\n",
+    "    return [np.load(prefix + name + '.npy', allow_pickle=allow_pickle) for name in file_names]\n",
+    "\n",
+    "def save_arrays(arrays, file_names, prefix='data/', allow_pickle=False):\n",
+    "    for arr, name in zip(arrays, file_names):\n",
+    "        if allow_pickle:\n",
+    "            np.save(prefix + name + '.npy', np.array(arr, dtype='object'), allow_pickle=allow_pickle)\n",
+    "        else:\n",
+    "            np.save(prefix + name + '.npy', np.array(arr), allow_pickle=allow_pickle)\n",
+    "\n",
+    "def compute_and_append_energies(G, energy_lists):\n",
+    "    n = G.number_of_nodes()\n",
+    "    for k in range(1, n//2 + 1):\n",
+    "        Gk = get_token_graph(G, k)\n",
+    "        Lk = get_laplacian_matrix(Gk)\n",
+    "        Qk = get_signless_laplacian_matrix(Gk)\n",
+    "        Ak = get_adjacency_matrix(Gk)\n",
+    "        energy_lists[0].append(np.max(eigh(Lk, eigvals_only=True)))\n",
+    "        energy_lists[1].append(np.max(eigh(Qk, eigvals_only=True)))\n",
+    "        Ak_eigvals = eigh(Ak, eigvals_only=True)\n",
+    "        energy_lists[2].append(np.max(Ak_eigvals))\n",
+    "        energy_lists[3].append(-np.min(Ak_eigvals))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Unweighted"
+    "## Unweighted Graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute or Load Stats"
    ]
   },
   {
@@ -324,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -346,46 +375,20 @@
     "max_degrees = np.array([max([d for _,d in G.degree()]) for G in all_graphs])\n",
     "# we will compute flattened arrays that loop over all graphs and all k from 1 to n//2 (where n is irregular, as it is the number of nodes)\n",
     "# as such, we create an index map that goes from this flattened array to the original graph and k\n",
-    "data = []\n",
     "index_map = []\n",
     "for graph_idx, G in enumerate(all_graphs):\n",
     "    n = G.number_of_nodes()\n",
     "    for k in range(1, n // 2 + 1):\n",
     "        index_map.append((graph_idx, k))\n",
-    "print(len(all_graphs))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(len(all_graphs))\n",
+    "\n",
     "PATH_AND_CYCLE_NS = np.arange(2,14)\n",
     "ODD_CYCLE_NS = np.arange(3,14,2)\n",
     "# reload if already computed, otherwise will save in data folder\n",
     "PRECOMPUTED_UNWEIGHTED_DATA = True\n",
     "PRECOMPUTED_PATH_AND_CYCLE_DATA = True\n",
     "PRECOMPUTED_WEIGHTED_DATA = False\n",
-    "PRECOMPUTED_2VC_FC_IDXS = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_arrays(file_names, prefix='data/', allow_pickle=False):\n",
-    "    return [np.load(prefix + name + '.npy', allow_pickle=allow_pickle) for name in file_names]\n",
-    "\n",
-    "def save_arrays(arrays, file_names, prefix='data/', allow_pickle=False):\n",
-    "    for arr, name in zip(arrays, file_names):\n",
-    "        if allow_pickle:\n",
-    "            np.save(prefix + name + '.npy', np.array(arr, dtype='object'), allow_pickle=allow_pickle)\n",
-    "        else:\n",
-    "            np.save(prefix + name + '.npy', np.array(arr), allow_pickle=allow_pickle)\n",
-    "        \n",
+    "PRECOMPUTED_2VC_FC_IDXS = True\n",
     "\n",
     "energy_keys = ['max_Lk_energies', 'max_Qk_energies', 'max_Ak_energies', 'max_nAk_energies']\n",
     "cut_match_keys = ['cuts', 'matches']\n",
@@ -395,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,18 +426,16 @@
     "            max_nAk_energies[idx].append(-np.min(Ak_eigvals))\n",
     "\n",
     "    save_arrays([max_Lk_energies, max_Qk_energies, max_Ak_energies, max_nAk_energies], energy_keys, allow_pickle=True)\n",
-    "    save_arrays([cuts, matches], cut_match_keys)\n",
-    "    max_Lk_energies, max_Qk_energies, max_Ak_energies, max_nAk_energies = load_arrays(energy_keys, allow_pickle=True)\n",
-    "    cuts, matches = load_arrays(cut_match_keys)"
+    "    save_arrays([cuts, matches], cut_match_keys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_token_graph_data(graph_fn, n_vals, prefix):\n",
+    "def compute_and_save_token_graph_data(graph_fn, n_vals, prefix):\n",
     "    Ls, Qs, As, nAs = [[] for _ in n_vals], [[] for _ in n_vals], [[] for _ in n_vals], [[] for _ in n_vals]\n",
     "    cuts, matches = np.zeros(len(n_vals)), np.zeros(len(n_vals))\n",
     "\n",
@@ -461,12 +462,8 @@
     "    cycle_matches, cycle_cuts = load_arrays(cut_match_keys, prefix='data/cycle_', allow_pickle=False)\n",
     "\n",
     "else:\n",
-    "    compute_token_graph_data(nx.path_graph, PATH_AND_CYCLE_NS, 'path_')\n",
-    "    compute_token_graph_data(nx.cycle_graph, PATH_AND_CYCLE_NS, 'cycle_')\n",
-    "    (path_Lk_energies, path_Qk_energies, path_Ak_energies, path_nAk_energies) = load_arrays(energy_keys, prefix='data/path_', allow_pickle=True)\n",
-    "    path_matches, path_cuts = load_arrays(cut_match_keys, prefix='data/path_', allow_pickle=False)\n",
-    "    (cycle_Lk_energies, cycle_Qk_energies, cycle_Ak_energies, cycle_nAk_energies) = load_arrays(energy_keys, prefix='data/cycle_', allow_pickle=True)\n",
-    "    cycle_matches, cycle_cuts = load_arrays(cut_match_keys, prefix='data/cycle_', allow_pickle=False)"
+    "    compute_and_save_token_graph_data(nx.path_graph, PATH_AND_CYCLE_NS, 'path_')\n",
+    "    compute_and_save_token_graph_data(nx.cycle_graph, PATH_AND_CYCLE_NS, 'cycle_')"
    ]
   },
   {
@@ -508,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyze Small Unweighted Graphs"
+    "### Analyze Unweighted Graphs"
    ]
   },
   {
@@ -1747,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1770,115 @@
     "    ax.set_title(f\"idx={idx}\")\n",
     "    ax.set_axis_off()\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k=1:  Ak: 2.8903741245414665, -Ak: 2.083696893409347\n",
+      "k=2:  Ak: 4.800596857271172, -Ak: 3.455845931416418\n",
+      "k=3:  Ak: 5.8200241514741435, -Ak: 4.471774701625339\n",
+      "k=4:  Ak: 6.108035168107578, -Ak: 4.4703954397466195\n"
+     ]
+    }
+   ],
+   "source": [
+    "G = all_graphs[2028]\n",
+    "n = G.number_of_nodes()\n",
+    "for k in range(1, n//2 + 1):\n",
+    "    Gk = get_token_graph(G, k)\n",
+    "    Ak = get_adjacency_matrix(Gk)\n",
+    "    Ak_eigvals = np.linalg.eigvalsh(Ak)\n",
+    "    max_Ak_eigval = np.max(Ak_eigvals)\n",
+    "    min_Ak_eigval = np.min(Ak_eigvals)\n",
+    "    print(f\"k={k}:  Ak: {max_Ak_eigval}, -Ak: {-min_Ak_eigval}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Weighted Graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weighted_graph_keys = ['weighted_graphs', 'weighted_total_weights']\n",
+    "weighted_energy_keys = ['weighted_max_Lk_energies', 'weighted_max_Qk_energies', 'weighted_max_Ak_energies', 'weighted_max_nAk_energies']\n",
+    "weighted_cut_match_keys = ['weighted_cuts', 'weighted_matches']\n",
+    "WEIGHTED_NS = np.array([4,5,6,7,8,9,10])\n",
+    "WEIGHTED_TRIALS_BY_N = 2**(20-WEIGHTED_NS)\n",
+    "weighted_index_map = []\n",
+    "\n",
+    "#num_weighted_graphs =  4*np.sum(WEIGHTED_TRIALS_BY_N) # four types of graph per N\n",
+    "\n",
+    "weighted_idx_map = []\n",
+    "for n, trials in zip(WEIGHTED_NS, WEIGHTED_TRIALS_BY_N):\n",
+    "    for _ in range(trials):\n",
+    "        for k in range(1, n // 2 + 1):\n",
+    "            weighted_idx_map.extend([(n, k)] * 4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if PRECOMPUTED_WEIGHTED_DATA:\n",
+    "    weighted_graphs, weighted_total_weights = load_arrays(weighted_graph_keys, allow_pickle=True)\n",
+    "    weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies = load_arrays(weighted_energy_keys, allow_pickle=True)\n",
+    "    weighted_cuts, weighted_matches = load_arrays(weighted_cut_match_keys)\n",
+    "else:\n",
+    "    weighted_graphs, weighted_total_weights = [], []\n",
+    "    weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies = [], [], [], []\n",
+    "    weighted_cuts, weighted_matches = [], []\n",
+    "\n",
+    "    for N, trials in zip(WEIGHTED_NS, WEIGHTED_TRIALS_BY_N):\n",
+    "        \n",
+    "        for _ in tqdm(range(trials)):\n",
+    "            # uniform weighted complete graphs\n",
+    "            G = nx.complete_graph(N)\n",
+    "            add_weights(G, 'uniform')\n",
+    "            total_weight = get_weight_sum(G)\n",
+    "            compute_and_append_energies(G, [weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies])\n",
+    "            \n",
+    "            # connected Erdos renyi graph\n",
+    "            for trial in range(100):\n",
+    "                G = nx.erdos_renyi_graph(N, np.random.uniform(.1, 1))\n",
+    "                if nx.is_connected(G):\n",
+    "                    break\n",
+    "            add_weights(G, 'uniform')\n",
+    "            total_weight = get_weight_sum(G)\n",
+    "            compute_and_append_energies(G, [weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies])\n",
+    "\n",
+    "            # exponentially weighted complete graph\n",
+    "            G = nx.complete_graph(N)\n",
+    "            add_weights(G, 'exponential', scale=1)\n",
+    "            total_weight = get_weight_sum(G)\n",
+    "            compute_and_append_energies(G, [weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies])\n",
+    "\n",
+    "            # strongly exponenitally weighted  complete graph\n",
+    "            G = nx.complete_graph(N)\n",
+    "            add_weights(G, 'exponential', scale=10)\n",
+    "            total_weight = get_weight_sum(G)\n",
+    "            compute_and_append_energies(G, [weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies])\n",
+    "\n",
+    "\n",
+    "    save_arrays([max_Lk_energies, max_Qk_energies, max_Ak_energies, max_nAk_energies], energy_keys, allow_pickle=True)\n",
+    "    save_arrays([weighted_graphs], weighted_graph_keys, allow_pickle=True)\n",
+    "    save_arrays([cuts, matches], cut_match_keys)\n"
    ]
   }
  ],
