loaded test weighted dataset

--- a/conjectures.ipynb
+++ b/conjectures.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,6 @@
     "# reload if already computed, otherwise will save in data folder\n",
     "PRECOMPUTED_UNWEIGHTED_DATA = True\n",
     "PRECOMPUTED_PATH_AND_CYCLE_DATA = True\n",
-    "PRECOMPUTED_WEIGHTED_DATA = False\n",
     "PRECOMPUTED_2VC_FC_IDXS = True\n",
     "\n",
     "energy_keys = ['max_Lk_energies', 'max_Qk_energies', 'max_Ak_energies', 'max_nAk_energies']\n",
@@ -398,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,14 +525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 273192/273192 [00:01<00:00, 262557.20it/s]\n"
+      "100%|██████████| 273192/273192 [00:01<00:00, 196831.44it/s]\n"
      ]
     }
    ],
@@ -1810,7 +1809,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PRECOMPUTED_WEIGHTED_DATA=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,23 +1826,40 @@
     "weighted_energy_keys = ['weighted_max_Lk_energies', 'weighted_max_Qk_energies', 'weighted_max_Ak_energies', 'weighted_max_nAk_energies']\n",
     "weighted_cut_match_keys = ['weighted_cuts', 'weighted_matches']\n",
     "WEIGHTED_NS = np.array([4,5,6,7,8,9,10])\n",
-    "WEIGHTED_TRIALS_BY_N = 2**(20-WEIGHTED_NS)\n",
+    "WEIGHTED_NS = np.array([4,5,6,7]) # for testing, comment out later\n",
+    "WEIGHTED_TRIALS_BY_N = 2**(20-WEIGHTED_NS)//100\n",
     "weighted_index_map = []\n",
-    "\n",
-    "#num_weighted_graphs =  4*np.sum(WEIGHTED_TRIALS_BY_N) # four types of graph per N\n",
     "\n",
     "weighted_idx_map = []\n",
     "for n, trials in zip(WEIGHTED_NS, WEIGHTED_TRIALS_BY_N):\n",
     "    for _ in range(trials):\n",
     "        for k in range(1, n // 2 + 1):\n",
-    "            weighted_idx_map.extend([(n, k)] * 4)\n"
+    "            weighted_idx_map.extend([(n, k)] * 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/655 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 655/655 [00:13<00:00, 48.37it/s] \n",
+      "100%|██████████| 327/327 [00:03<00:00, 90.74it/s]\n",
+      "100%|██████████| 163/163 [00:03<00:00, 52.85it/s]\n",
+      "100%|██████████| 81/81 [00:02<00:00, 38.08it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "if PRECOMPUTED_WEIGHTED_DATA:\n",
     "    weighted_graphs, weighted_total_weights = load_arrays(weighted_graph_keys, allow_pickle=True)\n",
@@ -1853,7 +1878,9 @@
     "            add_weights(G, 'uniform')\n",
     "            total_weight = get_weight_sum(G)\n",
     "            compute_and_append_energies(G, [weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies])\n",
-    "            \n",
+    "            weighted_graphs.append(G)\n",
+    "            weighted_total_weights.append(total_weight)\n",
+    "\n",
     "            # connected Erdos renyi graph\n",
     "            for trial in range(100):\n",
     "                G = nx.erdos_renyi_graph(N, np.random.uniform(.1, 1))\n",
@@ -1862,12 +1889,16 @@
     "            add_weights(G, 'uniform')\n",
     "            total_weight = get_weight_sum(G)\n",
     "            compute_and_append_energies(G, [weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies])\n",
+    "            weighted_graphs.append(G)\n",
+    "            weighted_total_weights.append(total_weight)\n",
     "\n",
     "            # exponentially weighted complete graph\n",
     "            G = nx.complete_graph(N)\n",
     "            add_weights(G, 'exponential', scale=1)\n",
     "            total_weight = get_weight_sum(G)\n",
     "            compute_and_append_energies(G, [weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies])\n",
+    "            weighted_graphs.append(G)\n",
+    "            weighted_total_weights.append(total_weight)    \n",
     "\n",
     "            # strongly exponenitally weighted  complete graph\n",
     "            G = nx.complete_graph(N)\n",
@@ -1875,11 +1906,17 @@
     "            total_weight = get_weight_sum(G)\n",
     "            compute_and_append_energies(G, [weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies])\n",
     "\n",
-    "\n",
-    "    save_arrays([max_Lk_energies, max_Qk_energies, max_Ak_energies, max_nAk_energies], energy_keys, allow_pickle=True)\n",
+    "    save_arrays([weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies], weighted_energy_keys, allow_pickle=True)\n",
     "    save_arrays([weighted_graphs], weighted_graph_keys, allow_pickle=True)\n",
-    "    save_arrays([cuts, matches], cut_match_keys)\n"
+    "    save_arrays([weighted_cuts, weighted_matches], weighted_cut_match_keys)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
