fixed so save total_weight

--- a/conjectures.ipynb
+++ b/conjectures.ipynb
@@ -1809,16 +1809,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PRECOMPUTED_WEIGHTED_DATA=False"
+    "PRECOMPUTED_WEIGHTED_DATA=True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,20 +1840,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 655/655 [00:08<00:00, 79.11it/s]\n",
-      "100%|██████████| 327/327 [00:05<00:00, 57.57it/s]\n",
-      "100%|██████████| 163/163 [00:03<00:00, 42.91it/s]\n",
-      "100%|██████████| 81/81 [00:03<00:00, 24.45it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if PRECOMPUTED_WEIGHTED_DATA:\n",
     "    weighted_graphs, weighted_total_weights = load_arrays(weighted_graph_keys, allow_pickle=True)\n",
@@ -1920,13 +1909,13 @@
     "    weighted_total_weights = np.array(weighted_total_weights)\n",
     "\n",
     "    save_arrays([weighted_max_Lk_energies, weighted_max_Qk_energies, weighted_max_Ak_energies, weighted_max_nAk_energies], weighted_energy_keys, allow_pickle=True)\n",
-    "    save_arrays([weighted_graphs], weighted_graph_keys, allow_pickle=True)\n",
+    "    save_arrays([weighted_graphs, weighted_total_weights], weighted_graph_keys, allow_pickle=True)\n",
     "    save_arrays([weighted_cuts, weighted_matches], weighted_cut_match_keys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,14 +1962,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4904/4904 [00:00<00:00, 279119.40it/s]\n"
+      "100%|██████████| 4904/4904 [00:00<00:00, 503953.62it/s]\n"
      ]
     }
    ],
